# local-text2sql-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
app/: main.py
app/agent/: debug_agent.py
app/api/: routes_debug.py  routes_query.py  routes_train.py
app/core/: config.py
app/db/: models.py  sqlite_client.py
app/embeddings/: embedder.py
app/evaluation/: eval_loop.py  metrics.py
app/inference/: pipeline.py
app/lessons/: critic.py  generator.py
app/llm/: claude_client.py  prompts.py
app/sql/: comparator.py  generator.py  validator.py
app/training/: pipeline.py
app/vectorstore/: faiss_index.py  kb_manager.py
data/: sample_pairs.csv
docs/: architecture.md  lessons_schema.md  project_context.md  prompt_design.md
scripts/: seed_data.py
tests/: test_api.py  test_claude_client.py  test_comparator.py  test_critic.py  test_debug_agent.py  test_embedder.py  test_eval_loop.py  test_generator.py  test_inference_pipeline.py  test_kb_manager.py  test_lesson_generator.py  test_metrics.py  test_training_pipeline.py  test_validator.py
