[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-text2sql-rag"
version = "0.1.0"
description = "Local self-learning text-to-SQL RAG system"
requires-python = ">=3.11"
dependencies = [
    # API layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",   # for file upload in FastAPI
    "httpx>=0.27.0",             # async HTTP client (also used for testing)

    # LLM
    "anthropic>=0.25.0",

    # Embeddings
    "sentence-transformers>=2.7.0",

    # Vector search
    "faiss-cpu>=1.8.0",

    # SQL parsing and comparison
    "sqlglot>=23.0.0",

    # Query execution (local substitute for Snowflake)
    "duckdb>=0.10.0",

    # Data handling
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Config and validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
